# APIRestFlask

./: Makefile  app.py  database.json  pyproject.toml
.github/workflows/: linting.yml
