[tool.poetry]
name = "apirest"
version = "0.1.0"
description = ""
authors = ["Jeziel Almeida <jeziel.almeida16@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"
flask-pydantic-spec = "^0.4.1"
tinydb = "^4.7.1"


[tool.poetry.group.dev.dependencies]
httpie = "^3.2.1"
blue = "^0.9.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
